<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserProifle"
    android:filterTouchesWhenObscured="true">

    <LinearLayout
        android:id="@+id/userProfileToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imgBackProfile"
            android:layout_width="28dp"
            android:layout_marginLeft="8dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_back_24"/>

        <TextView
            android:text="Profile"
            android:textColor="#fff"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginLeft="18dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfileToolbar"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgUserProfile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    app:civ_border_width="0dp"
                    app:civ_border_color="#22adadad"
                    app:civ_border_overlay="false"
                    android:layout_centerInParent="true"
                    android:src="@drawable/default_maxpe_profile"/>

                <ImageView
                    android:id="@+id/imgAddProfile"
                    android:src="@drawable/ic_pencil_edit_button"
                    android:layout_below="@id/imgUserProfile"
                    android:layout_toRightOf="@id/imgUserProfile"
                    android:padding="10dp"
                    android:visibility="visible"
                    android:layout_marginLeft="-54dp"
                    android:layout_marginTop="-52dp"
                    android:background="@drawable/add_image_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tvProfileName"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/username"
                android:textStyle="bold"
                android:visibility="gone"
                android:textColor="#404040"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvUserEmail"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/emailid"
                android:textColor="#404040"
                android:visibility="gone"
                android:textSize="@dimen/fourteensp" />

            <TextView
                android:id="@+id/tvUserMob"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/mobilenumber"
                android:textColor="#505050"
                android:textStyle="bold"
                android:textSize="15sp" />

            <RelativeLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/llMinKycData"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fourteensp"
                    android:padding="4dp"
                    android:background="@drawable/layoutshape"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUpdateLimit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:textColor="#696969"
                        android:gravity="left"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:text="Your Wallet Limits : 10,000/Month"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvValidDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:layout_marginLeft="26dp"
                        android:layout_marginRight="@dimen/sixteendp"
                        android:text="Valid till 31 July 2019"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="@dimen/sixteendp"
                        android:layout_marginRight="@dimen/sixteendp"
                        android:text="Complete your KYC to increase wallet limit upto 1 lakh/month &amp; get more benefits"
                        android:textSize="@dimen/twelvesp" />

                    <Button
                        android:id="@+id/btnFullKyc"
                        android:text="Complete KYC"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:background="@drawable/flightbndesign"
                        android:textColor="@color/QRCodeWhiteColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginLeft="@dimen/sixteendp"
                        android:layout_marginRight="@dimen/sixteendp"
                        android:layout_marginBottom="16dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llKycCompleted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/twelvedp"
                    android:padding="8dp"
                    android:visibility="gone"
                    android:background="@drawable/layoutshape"
                    android:orientation="vertical">

                    <LinearLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="7dp"
                        android:orientation="horizontal">

                        <ImageView android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_succes_checked"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:layout_marginLeft="4dp"
                            android:text="You have done your KYC"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="@dimen/sixteendp"
                        android:layout_marginRight="@dimen/sixteendp"
                        android:text="Your wallet limit upto 1 lakh/month. If you want to change your KYC Detail Contact Us"
                        android:textSize="@dimen/fourteensp" />

                    <TextView
                        android:id="@+id/tvValidFullKyc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="7dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="@dimen/sixteendp"
                        android:layout_marginRight="@dimen/sixteendp"
                        android:text="Valid till 31 July 2019"
                        android:textSize="12sp" />

                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tvMyQrCode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourtydp"
                android:layout_marginTop="@dimen/thirtydp"
                android:gravity="left|center_vertical"
                android:text="My QR Code"
                android:foreground="?attr/selectableItemBackground"
                android:background="?attr/selectableItemBackground"
                android:drawableRight="@drawable/ic_keyboard_arrow_right"
                android:drawablePadding="20dp"
                android:visibility="invisible"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:textSize="@dimen/sixteensp"
                android:layout_marginBottom="8dp"/>

            <View android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:visibility="invisible"
                android:background="@color/color_gray"/>

            <TextView
                android:id="@+id/tvPersonalDetails"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourtydp"
                android:layout_marginTop="10dp"
                android:gravity="left|center_vertical"
                android:text="Personal Detail"
                android:foreground="?attr/selectableItemBackground"
                android:background="?attr/selectableItemBackground"
                android:drawableLeft="@drawable/ic_person"
                android:drawableRight="@drawable/ic_keyboard_arrow_right"
                android:drawablePadding="20dp"
                android:visibility="invisible"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:textSize="@dimen/sixteensp"
                android:layout_marginBottom="8dp"/>

            <View android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:visibility="invisible"
                android:background="@color/color_gray"/>

            <TextView
                android:id="@+id/tvMyAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourtydp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_right"
                android:foreground="?attr/selectableItemBackground"
                android:background="?attr/selectableItemBackground"
                android:drawableLeft="@drawable/ic_agenda"
                android:drawablePadding="20dp"
                android:layout_marginBottom="@dimen/twentydp"
                android:gravity="left|center_vertical"
                android:text="My Address"
                android:visibility="invisible"
                android:textSize="@dimen/sixteensp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>